syntax = "proto3";

package buildbarn.remoteactionrouter;

import "build/bazel/remote/execution/v2/remote_execution.proto";
import "google/protobuf/any.proto";

option go_package = "github.com/buildbarn/bb-remote-execution/pkg/proto/remoteactionrouter";

message RouteActionRequest {
  build.bazel.remote.execution.v2.DigestFunction.Value digest_function = 1;

  build.bazel.remote.execution.v2.Action action = 2;

  build.bazel.remote.execution.v2.RequestMetadata request_metadata = 3;
}

message RouteActionResponse {
  // The updated action. An empty action means no changes were made.
  optional build.bazel.remote.execution.v2.Action action = 1;

  // Together with platform this decides the ActionRouter PlatformKey.
  string instance_name_prefix = 2;

  // Together with instance_name_prefix this decides the ActionRouter PlatformKey.
  build.bazel.remote.execution.v2.Platform platform = 3;

  // Invocation keys used for fairness grouping.
  repeated google.protobuf.Any invocation_keys = 4;
}

// To make action routing more pluggable bb_scheduler will call into this
// service allowing it to update the Action and decide the scheduler queue
// and fairness policy to use.
service ActionRouter {
  rpc RouteAction(RouteActionRequest) returns (RouteActionResponse);
}
